Refactor response generation in commons.py, update training parameters in try_train.py, and enhance logging for model predictions. Added backup configuration for DeepSpeed and expanded training scripts in note_other.

--- a/1.2. GenReason LLM XRAY.ipynb
+++ b/1.2. GenReason LLM XRAY.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "8d1b132e",
    "metadata": {},
    "outputs": [
@@ -18,13 +18,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ldap-users-2/dwipraseetyo-a/Project/Qwen2.5-Omni\n"
+      "/home/ldap-users-2/dwipraseetyo-a/Project/Qwen2.5-Omni\n",
+      "CUDA_VISIBLE_DEVICES: 0\n"
      ]
     }
    ],
    "source": [
     "%cd /home/is/dwipraseetyo-a/NAS_HAI/Project/Qwen2.5-Omni\n",
     "%pwd\n",
+    "\n",
+    "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "print(\"CUDA_VISIBLE_DEVICES:\", os.environ[\"CUDA_VISIBLE_DEVICES\"])\n",
+    "\n",
     "\n",
     "import commons, const_variable\n",
     "import os, librosa, random, pickle, pydicom, requests, torch, re, json, pydicom\n",
@@ -76,15 +82,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0b86e3d4",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de569dd61b864ee69c2933957be598ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.21it/s]\n",
       "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n"
      ]
     }
@@ -104,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "d49c9ed6",
    "metadata": {},
    "outputs": [],
@@ -114,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "33aa1594",
    "metadata": {},
    "outputs": [
@@ -122,12 +141,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing dev,:   0%|                                                                                                                                                                                               | 0/269 [00:00<?, ?it/s]\n"
+      "Processing train,: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2173/2173 [00:50<00:00, 42.93it/s]\n",
+      "Generating: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 91/91 [23:34<00:00, 15.54s/it]\n",
+      "Processing dev,: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 272/272 [00:06<00:00, 43.89it/s]\n",
+      "Generating: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 12/12 [03:07<00:00, 15.59s/it]\n",
+      "Processing test,: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 272/272 [00:06<00:00, 41.35it/s]\n",
+      "Generating: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 12/12 [03:02<00:00, 15.23s/it]\n"
      ]
     }
    ],
    "source": [
-    "for split in ['dev', 'test']:\n",
+    "for split in ['train', 'dev', 'test']:\n",
     "    df = pd.read_csv(f\"{DATA_PATH}/metadata_cut_processed.csv.{split}\")\n",
     "    results = []\n",
     "    paths = []\n",
@@ -187,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ad1d8059",
    "metadata": {},
    "outputs": [
@@ -195,9 +219,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing train,: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2151/2151 [00:02<00:00, 786.99it/s]\n",
-      "Processing dev,: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 269/269 [00:00<00:00, 835.83it/s]\n",
-      "Processing test,: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 270/270 [00:00<00:00, 828.18it/s]\n"
+      "Processing train,: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2173/2173 [00:02<00:00, 776.85it/s]\n",
+      "Processing dev,: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 272/272 [00:00<00:00, 838.04it/s]\n",
+      "Processing test,: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 272/272 [00:00<00:00, 824.38it/s]\n"
      ]
     }
    ],
