--- a/1.3. Gen Instruct.ipynb
+++ b/1.3. Gen Instruct.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "639c35f6",
    "metadata": {},
    "outputs": [
@@ -44,20 +44,20 @@
     "#     \"A conversation between User and Advanced medical assistant specialized in analyzing and diagnosing clinical conditions. and the Assistant determines whether the case is Positive or Negative. The assistant \"\n",
     "#     \"first thinks about the reasoning process in the mind and then provides the user with the answer. The reasoning \"\n",
     "#     \"process and answer are enclosed within <think> </think> and <answer> </answer> tags, respectively, i.e., \"\n",
-    "#     \"<think> reasoning process here </think><answer>answer here</answer>\"\n",
+    "#     \"<think> reasoning process here </think><answer> answer here </answer>\"\n",
     "# )\n",
     "\n",
     "system_prompt = '''\n",
     "You are an advanced medical assistant AI specialized in analyzing and diagnosing clinical conditions, capable of perceiving auditory and visual inputs. \n",
     "You can interpret and reason over various medical inputs, including auditory inputs, visual inputs, and patient symptoms, individually or in combination, depending on what is provided. \n",
-    "Your task is to analyze the given input, explain your reasoning, and give a possible diagnosis. \n",
+    "Your task is to analyze the given input, explain your reasoning, and give a possible diagnosis. Answer are enclosed within <answer> </answer> tags, respectively, i.e., <answer> answer here </answer> .\n",
     "Always respond in the following format:\n",
     "\n",
     "## ⚠️ Points to Review and Disclaimer\n",
     "<If no auditory or visual input is provided>\n",
     "\n",
     "## 🧠 Overview\n",
-    "<answer><Diagnosis sentence></answer>\n",
+    "<answer> <Positive or Negative Diagnosis> </answer>\n",
     "\n",
     "## 📋 Observations\n",
     "**Chest X-ray:**\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "4e356703",
    "metadata": {},
    "outputs": [
@@ -81,23 +81,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2717179/3888807449.py:3: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  df_llm_symptoms = ( pd.read_csv(f\"datas/reasoning/symptoms/o4-mini_symptoms.csv.{split}\").groupby('barcode', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) )\n",
-      "/tmp/ipykernel_2717179/3888807449.py:4: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  df_llm_images = ( pd.read_csv(f\"datas/reasoning/xray/medgemma_xray_formatted.csv.{split}\").groupby('path_file_image', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) )\n",
-      "Processing train: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2151/2151 [00:00<00:00, 35492.65it/s]\n",
-      "/tmp/ipykernel_2717179/3888807449.py:3: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  df_llm_symptoms = ( pd.read_csv(f\"datas/reasoning/symptoms/o4-mini_symptoms.csv.{split}\").groupby('barcode', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) )\n",
-      "/tmp/ipykernel_2717179/3888807449.py:4: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  df_llm_images = ( pd.read_csv(f\"datas/reasoning/xray/medgemma_xray_formatted.csv.{split}\").groupby('path_file_image', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) )\n",
-      "Processing dev: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 269/269 [00:00<00:00, 37670.45it/s]\n"
+      "/tmp/ipykernel_3057582/3122668694.py:3: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df_llm_symptoms = ( pd.read_csv(f\"datas/reasoning/symptoms/gpt-4o-mini_symptoms.csv.{split}\").groupby('barcode', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) )\n",
+      "/tmp/ipykernel_3057582/3122668694.py:4: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df_llm_images = ( pd.read_csv(f\"datas/reasoning/xray/medgemma_xray_formatted.csv.{split}\").groupby('path_file_image', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) )\n"
      ]
     }
    ],
    "source": [
     "for split in ['train', 'dev']:\n",
     "    df = pd.read_csv(f\"{DATA_PATH}/metadata_cut_processed.csv.{split}\")\n",
-    "    df_llm_symptoms = ( pd.read_csv(f\"datas/reasoning/symptoms/o4-mini_symptoms.csv.{split}\").groupby('barcode', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) ) \n",
+    "    df_llm_symptoms = ( pd.read_csv(f\"datas/reasoning/symptoms/gpt-4o-mini_symptoms.csv.{split}\").groupby('barcode', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) ) \n",
     "    df_llm_images = ( pd.read_csv(f\"datas/reasoning/xray/medgemma_xray_formatted.csv.{split}\").groupby('path_file_image', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) )\n",
     "    df = pd.merge(df, df_llm_symptoms, on='barcode', how='left')\n",
     "    df = pd.merge(df, df_llm_images, on='path_file_image', how='left')\n",
@@ -194,21 +188,45 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "efa7eddb",
+   "id": "83eb0f8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import login\n",
-    "from dotenv import load_dotenv\n",
-    "from datasets import Dataset, concatenate_datasets\n",
-    "\n",
-    "load_dotenv()\n",
-    "login(token=os.getenv(\"HG_AUTH_KEY_WRITE\"))"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "id": "3ceea336",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Negative Tuberculosis'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.search(r'<answer>(.*?)</answer>', \"<answer> Negative Tuberculosis </answer>\", flags=re.IGNORECASE).group(1).strip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e87355f",
+   "metadata": {},
+   "source": [
+    "# Publish To HG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4d8bc439",
    "metadata": {},
    "outputs": [
@@ -315,6 +333,13 @@
     }
    ],
    "source": [
+    "from huggingface_hub import login\n",
+    "from dotenv import load_dotenv\n",
+    "from datasets import Dataset, concatenate_datasets\n",
+    "\n",
+    "load_dotenv()\n",
+    "login(token=os.getenv(\"HG_AUTH_KEY_WRITE\"))\n",
+    "\n",
     "commons.pretty_status(\"📦 Loading Dataset...\")\n",
     "\n",
     "with open('datas/instruct_grpo_balance.pkl.train', 'rb') as f:\n",
@@ -328,101 +353,6 @@
     "\n",
     "combined = concatenate_datasets([train_dataset, val_dataset])\n",
     "combined.push_to_hub(\"arkiven4/cirdz-instruct\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0fbb265",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "729ecd6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for split in ['train', 'dev']:\n",
-    "    df = pd.read_csv(f\"{DATA_PATH}/metadata_cut_processed.csv.{split}\")\n",
-    "    df_llm_symptoms = ( pd.read_csv(f\"datas/reasoning/symptoms/o4-mini_symptoms.csv.{split}\").groupby('barcode', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) ) \n",
-    "    df_llm_images = ( pd.read_csv(f\"datas/reasoning/xray/medgemma_xray_formatted.csv.{split}\").groupby('path_file_image', group_keys=False).apply(lambda x: x.sample(1), include_groups=True).reset_index(drop=True) )\n",
-    "    df = pd.merge(df, df_llm_symptoms, on='barcode', how='left')\n",
-    "    df = pd.merge(df, df_llm_images, on='path_file_image', how='left')\n",
-    "    df = df.rename(columns={'coughdur': 'cough_duration', 'ngtsweats': 'night_sweets', 'weightloss': 'weight_loss', 'body_wt': 'body_weight'})\n",
-    "\n",
-    "    instruct_array = []\n",
-    "    for now_row in tqdm(df.itertuples(), desc=f\"Processing {split}\", total=len(df)):\n",
-    "        row_dict = now_row._asdict()\n",
-    "        now_audiopath = \"/home/is/dwipraseetyo-a/NAS_HAI/Datasets/cidrz/\" +  now_row.path_file_audio\n",
-    "        now_imgaepath = \"/home/is/dwipraseetyo-a/NAS_HAI/Datasets/cidrz/\" +  now_row.path_file_image\n",
-    "\n",
-    "        for i in range(6):\n",
-    "            array_df = [None, None]\n",
-    "            question, modalities = commons.unique_modalities_generator(const_variable.prompt_templates)\n",
-    "            question += \". \"\n",
-    "            templates = const_variable.positive_templates if now_row.ground_truth_tb == 1 else const_variable.negative_templates\n",
-    "            answer = random.choice(templates)\n",
-    "            #answer = commons.generate_tb_response(modalities, now_row.llm_analyze_symptoms, now_row.llm_analyze_image, positive=(now_row.ground_truth_tb == 1))       \n",
-    "            \n",
-    "            if now_row.path_file_audio == 'Unknown':\n",
-    "                modalities = [m for m in modalities if m != \"audio\"]\n",
-    "\n",
-    "            array_df = [None, None]\n",
-    "            if \"symptoms\" in modalities:\n",
-    "                row_dict = now_row._asdict()\n",
-    "                selected_feats = random.sample(const_variable.columns_soundfeat, k=random.randint(3, len(const_variable.columns_soundfeat)))\n",
-    "                symptom_descriptions = \", \".join(\n",
-    "                    f\"{feat.replace('_', ' ')} is {row_dict[feat]}\"\n",
-    "                    for feat in selected_feats\n",
-    "                    if row_dict.get(feat) != \"Unknown\"\n",
-    "                )\n",
-    "                if symptom_descriptions:\n",
-    "                    question += f\" Also, the patient presents with: {symptom_descriptions}.\"\n",
-    "\n",
-    "            if \"audio\" in modalities:\n",
-    "                array_df[0] = now_audiopath\n",
-    "\n",
-    "            if \"xray\" in modalities:\n",
-    "                array_df[1] = now_imgaepath\n",
-    "                xray_descriptions = \", \".join(\n",
-    "                    f\"{feat.replace('_', ' ')} is {row_dict[feat]}\"\n",
-    "                    for feat in const_variable.columns_imagefeat\n",
-    "                    if row_dict.get(feat) != \"Unknown\"\n",
-    "                )\n",
-    "                if xray_descriptions:\n",
-    "                    question += f\" Additional chest x-ray metadata include: {xray_descriptions}.\"\n",
-    "\n",
-    "            question = question.strip()\n",
-    "            question = question.rstrip(\",.\")\n",
-    "            if not question.endswith(\".\"):\n",
-    "                question += \".\"\n",
-    "\n",
-    "            temp_instruct = {\"messages\": [\n",
-    "                {\"role\": \"system\",\n",
-    "                    \"content\": [\n",
-    "                        {\"type\": \"text\", \"text\": system_prompt}\n",
-    "                    ],\n",
-    "                },\n",
-    "                {\n",
-    "                    \"role\": \"user\",\n",
-    "                    \"content\": [\n",
-    "                        {\"type\": \"text\", \"text\": question},\n",
-    "                    ],\n",
-    "                },\n",
-    "                {\"role\": \"assistant\", \"content\": [\n",
-    "                    {\"type\": \"text\", \"text\": answer}]},\n",
-    "            ]}\n",
-    "            if array_df[0] != None:\n",
-    "                temp_instruct[\"messages\"][1]['content'].append({\"type\": \"audio\", \"audio\": array_df[0]})\n",
-    "            if array_df[1] != None:\n",
-    "                temp_instruct[\"messages\"][1]['content'].append({\"type\": \"image\", \"image\":array_df[1]})\n",
-    "            instruct_array.append(temp_instruct)\n",
-    "    \n",
-    "    with open(f\"datas/instruct_noreasoning.pkl.{split}\", \"wb\") as f:\n",
-    "        pickle.dump(instruct_array, f)"
    ]
   },
   {
@@ -563,18 +493,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
   }
  },
  "nbformat": 4,
